# win-ldac

./: .gitignore  .gitmodules  CMakeLists.txt  HANDOFF.md  LICENSE  NOTICE  README.md  README.zh.md  STATUS.md  build.ps1
assets/: OFL.txt  README.md
cmake/: btstack.cmake
cmake/win_compat/: msvc_compat.h  unistd.h
core/: CMakeLists.txt
core/src/: main.cpp
core/src/a2dp_ldac/: a2dp_ldac_caps.c  a2dp_ldac_caps.h  a2dp_ldac_source.c  a2dp_ldac_source.h
core/src/app/: config_file.c  config_file.h  reconnect_supervisor.c  reconnect_supervisor.h
core/src/audio/: wasapi_loopback.cpp  wasapi_loopback.h
core/src/bt/: link_key_db_file.c  link_key_db_file.h
core/src/engine/: engine.c  engine.h
core/src/ldac/: ldac_wrapper.c  ldac_wrapper.h
core/src/tools/: a2dp_ldac_persistent_test.c  a2dp_ldac_play_test.c  a2dp_ldac_test.c  a2dp_sine_test.c  a2dp_wasapi_test.c  engine_persistent_test.c  hci_scan_test.c  ldac_encode_test.cpp
docs/: ARCHITECTURE.md
firmware/: README.md
gui/: CMakeLists.txt  win-ldac.rc.in
gui/src/: main.cpp  resources.h
gui/src/ui/: status_window.cpp  status_window.h
